@startuml core.puml
title Core - Racetrack Core Class Diagram

class Engine
{
	+Engine( IPlatform& )

	+init()
	+run()
	+shutdown()

	+get_world() : World&
	+get_registry() : Registry&

	' +push_event( unique_ptr<IEvent>)
	+push_command( unique_ptr<ICommand>)
}

class World
{
	+for_each_entity<T,Fn>( Fn&& fn )
	+get_component<T>( Entity e )
	+view<Ts...>() : View
}

class Registry
{
	-World& world

	+create_entity() : Entity
	+remove_entity( Entity )

	+register_component<T>( const string& )
    +create_component( Entity, const string& ) : bool
	+with_component( Entity, const string&, std::function<void(void*)>&& ) : bool
    +remove_component( Entity, const string& ) : bool

    +flush() : bool
    +clear()
}

class View
{
	-const World&

	+begin() : View::Iterator
	+end() : View::Iterator
}

struct View::Iterator
{
	operator*()
	operator++()
	operator!=()
}

class CommandQueue
{
	+push( std::unique_ptr<ICommand> )
	+pop()
}

class InputQueue
{
	+push( std::unique_ptr<IEvent> )
	+pop()
}

interface ICommand
{
	+{abstract} execute( Engine& engine )
}

interface ISystem
{
    +{abstract} type() : const type_index

    +{abstract} init()
    +{abstract} input()
    +{abstract} update( double elapsed )
    +{abstract} draw()
    +{abstract} flush()
    +{abstract} shutdown()
}

interface IEvent
{
	+{abstract} process( Engine& )
}

interface IPlatform
{
	 +{abstract} create_window( InputQueue& ) : bool
	 +{abstract} destroy_window() : void

	 +{abstract} begin_render() : void
	 +{abstract} present_frame() : void

	 +{abstract} get_time() : double
	 +{abstract} poll_events() : void
	 +{abstract} should_close() : bool

}



Registry -> World : references

View *- View::Iterator
World <-- View : references

InputQueue o-- "0..*" IEvent
CommandQueue o-- "0..*" ICommand
Engine o-- "0..*" ISystem

Engine *-- IPlatform
Engine *--- World
Engine *--- Registry
Engine *- CommandQueue
InputQueue -* Engine

@enduml